# toeplitz

./: .gitignore  .travis.yml  MANIFEST.in  README  README.md  README.rst  meson.build  pyproject.toml  setup.py  travis.yml
.github/: test_conda_env.yml
.github/workflows/: tests.yml
scripts/: toeplitz-runtests
src/: toeplitz.f90  toeplitz.pyf
tests/: test_toeplitz.py
