[build-system]
build-backend = 'mesonpy'
requires = ['meson-python', 'numpy']

[project]
name = "toeplitz"
version = "0.3.5"
authors = [
    {name = "Tom Eulenfeld"},
]
description = "Python wrapper for Fortran90 toeplitz package to solve a variety of Toeplitz and circulant linear systems"
readme = "README.rst"
license = {text = "MIT License"}
classifiers = [
    'Environment :: Console',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3',
    'Topic :: Scientific/Engineering :: Mathematics'
]

dependencies = [
  "numpy"
]

[project.urls]
"Homepage" = "https://github.com/trichter/toeplitz"
"Bug Tracker" = "https://github.com/trichter/toeplitz/issues"

